hello.html,Mywebpage.html,form.html,Style0.html,Style1.html,style.css,style2.html,sizediv.html,size.html,border.html,border.html

--- a/Mywebpage.html
+++ b/Mywebpage.html
@@ -2,6 +2,6 @@
 <html>
 <head> My Web Page </head>
 <body>
-<img src="Q06A2345.jpg">
+<img src="Q06A2345.jpg" height="2000" width="4000">
 </body>
 </html>
