--- a/branch.html
+++ b/branch.html
@@ -5,5 +5,10 @@
  </head>
  <body>
    hello World!How are you!
+   added the 2nd line of the file
+   added 3rd line
+   4th line added
+   added 5th line to file
+   heloooooo
   </body>
  </html>
